# acousticbrainz-android

./: .gitignore  .gitmodules  README.md  settings.gradle
acousticbrainz/: build.gradle
acousticbrainz/include/essentia/: version.h
acousticbrainz/src/main/: AndroidManifest.xml
acousticbrainz/src/main/cpp/: CMakeLists.txt  essentia_jni.cpp  extractors.h
acousticbrainz/src/main/java/org/metabrainz/acousticbrainz/: AcousticBrainzClient.java  AcousticBrainzClient.kt
app/: build.gradle
app/src/androidTest/java/org/metabrainz/essentiaandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  extractor_utils.h  extractors.h  native-lib.cpp  standard_mfcc.cpp  streaming_extractor_freesound.cpp  streaming_extractor_la-cupula.cpp  streaming_extractor_music.cpp  streaming_extractor_music.h  streaming_gfcc.cpp  streaming_mfcc.cpp
app/src/main/java/org/metabrainz/essentiaandroid/: AudioAnalysisWorker.java  AudioAnalysisWorker.kt  EssentiaJava.java  EssentiaJava.kt  EssentiaKotlin.kt  MainActivity.java  MainActivity.kt
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/metabrainz/essentiaandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_3rdparty_android.sh  build_chromaprint.sh  build_config.sh  build_config_android.sh  build_eigen3.sh  build_essentia.sh  build_ffmpeg.sh  build_lame.sh  build_libsamplerate.sh  build_taglib.sh  build_yaml.sh  download_3rdparty.sh  generate_libs.sh
